@@ -75,7 +75,8 @@ dnl ---
 dnl Set CXXFLAGS.
 dnl ---
 CXXFLAGS="-O2 -D_REENTRANT -DNDEBUG -ffast-math -fstrict-aliasing -funroll-loops"
-dnl CXXFLAGS="-O2 -D_REENTRANT -fomit-frame-pointer -finline-functions -ffast-math -funroll-loops -Wall -Wstrict-prototypes -pedantic -fstrict-aliasing"
+CFLAGS="$CXXFLAGS"
+dnl --- CXXFLAGS="-O2 -D_REENTRANT -fomit-frame-pointer -finline-functions -ffast-math -funroll-loops -Wall -Wstrict-prototypes -pedantic -fstrict-aliasing"
 
 dnl ------------------------------------------------------------------
 
@@ -104,6 +105,7 @@ AC_ARG_ENABLE(debug,
 AM_CONDITIONAL(INCLUDE_DEBUG, test x$include_debug = xyes)
 if test x$include_debug = xyes; then
 CXXFLAGS="-D_REENTRANT -g -DENABLE_DBC -Wall -Wstrict-prototypes -ffast-math"
+CFLAGS="$CXXFLAGS"
 dnl CXXFLAGS="-D_REENTRANT -g -Wall -Wstrict-prototypes -ffast-math"
 dnl LDFLAGS="-pg -pedantic -funroll-loops"
 fi                                     
